--- a/login-style.css
+++ b/login-style.css
@@ -47,12 +47,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5rem;
 }
 
 .signIn{    
     display: flex;
     flex-direction: column;
+    margin-bottom: 3rem;
     gap: 1rem;
 }
 
@@ -68,6 +68,7 @@ body{
 form{
     display: flex;
     flex-direction: column;
+    margin-bottom: 2rem;
     font-size: 25px;
     font-weight: 400;
     color: #F0F3F4;
@@ -83,6 +84,17 @@ form input{
     background: transparent;
     border-bottom: var(--white) 2px solid;
     margin: 10px 0 30px 0;
+}
+
+button{
+    width: 10rem;
+    height: 4rem;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--white);
+    background-image: linear-gradient(45deg, var(--yellow), var(--salmon));
+    cursor: pointer;
 }
 
 .illustrator img{
